# sharing-scores-dropbox

./: README.md  formalm.conf  generateScore.py  pyproject.toml  scoreHelpers.py  scoreHelpersTest.py
.github/workflows/: comment-link-security.js  formalm_verification.yml  pypeline.yml  reports-to-comments.js  test.yml
.github/workflows/scripts/: codeql-comment.js  reports-to-comments.js
iac-suggestions/: suggestion-deployment-KSV003-18-24.md  suggestion-deployment-KSV003-5-6.md  suggestion-deployment-KSV005-4-8.md  suggestion-deployment-KSV011-18-24.md  suggestion-deployment-KSV012-18-24.md  suggestion-deployment-KSV013-18-24.md  suggestion-deployment-KSV014-18-24.md  suggestion-deployment-KSV015-18-24.md  suggestion-deployment-KSV016-18-24.md  suggestion-deployment-KSV020-18-24.md  suggestion-deployment-KSV021-18-24.md  suggestion-deployment-KSV030-18-24.md  suggestion-deployment-KSV105-23-24.md  suggestion-deployment-KSV106-18-24.md
reports/: another_summary.md  summary.md
reports/iac/: a_third_one.md  example_1.md
src/: application.conf  configHelpers.py  dropboxAPI.py  generateScore.py  scoreHelpers.py
tests/: scoreHelpersTest.py  score_helpers_test.py
